fixed build issues

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -1,13 +1,13 @@
 {
   "compilerOptions": {
-    "jsx": "react",
     "composite": true,
     "skipLibCheck": true,
     "module": "ESNext",
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
-    "strict": true,
+    "strict": false,
     "baseUrl": ".",
+    "jsx": "react-jsx",
     "lib": ["ES2020", "DOM", "DOM.Iterable", "ES2020.Promise"],
     "paths": {
       "@/*": ["./src/*"]
